# Moss

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: candidates.chrdemo20.vcf  clone0.spike.sort.bam  clone1.spike.sort.bam.bai  clone1.strelka2.vcf  clone2.strelka2.vcf  clones.list  config.yaml  empty.bam  normal.sort.bam  normal.sort.bam.bai  sample0.spike.sort.bam.bai  sample0.strelka2.vcf  sample1.spike.sort.bam  sample2.spike.sort.bam  sample2.spike.sort.bam.bai  sample3.spike.sort.bam  sample3.spike.sort.bam.bai  sample3.strelka2.vcf
docker/: Dockerfile
scripts/: post_filter.py  run_moss.py  signature.R  union_cadidates.py  union_candidates.py
src/: main.cpp  moss.cpp
src/core/: SnvCaller.cpp  SnvCaller.h  calling.cpp  calling.h  types.cpp  types.h
src/io/: bam_io.cpp  bam_io.h  loci.cpp  loci.h  vcf_io.cpp  vcf_io.h
test/: SnvCaller_tests.cpp  bam_io_tests.cpp  calling_tests.cpp  types_tests.cpp
